# gameboy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-wasm.yml  build.yml
src/: main.cpp  wasm.html
src/cartridge/: cartridge.h  cartridge_factory.h  cartridge_header.h  mbc1.h
src/common/: circle_buffer.h  defs.h  logger.h  type.h  utils.h
src/debugger/: disassembler.cpp  disassembler.h
src/include/: gameboy_c.h
src/machine/: cpu.cpp  cpu.h  gameboy.h  gameboy_c.cpp  interrupt.h  joypad.cpp  joypad.h  memory_accessor.h  memory_bus.h  object_attribute.h  rtc.h  timer.cpp  timer.h
src/machine/apu/: apu.cpp  apu.h  channel.h  channel1.h  channel2.h  channel3.h  channel4.h  global_register.cpp  global_register.h  length_timer.h  miniaudio_wrapper.cpp  miniaudio_wrapper.h  volume_envelope.h
src/machine/cpu/: cpu.cpp  cpu.h  interrupt.h  rtc.h  timer.cpp
src/machine/memory/: memory_accessor.h  memory_bus.h  work_ram.h
src/machine/ppu/: object_attribute.h  palette.h  ppu.cpp  ppu.h  ppu_register.cpp  ppu_register.h
src/machine/serial/: serial.cpp  serial.h  serial_buffer.h
src/test/: circle_buffer_test.cpp  run_tests.cpp  test_base.h  test_set.cpp
src/widget/: colors.h  main_ui.cpp  main_ui.h
tests/: download_test.sh
tools/: download_demo.sh  download_test.sh  generate_test_report.py  simple_server.py
